--- a/UNIT_1/index.html
+++ b/UNIT_1/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GA press release</title>
+    <title>Mariage d'Isabelle et Arnaud</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <h1>General assembly offers Classes and Workshops Worldwide</h1>
-    <h2>For immediate release</h2>
-    <p>General Assembly offers classes and workshops in:</p>
+  <h1>Mariage d'Isabelle et Arnaud</h1>
+    <h2>Trouvez toutes les informations dont vous avez besoin pour profiter pleinement de ce mariage</h2>
+    <h3>commencons immediatement avec une petit presentation de ce beau couple.</h3>
+    <p>Isabelle est une femme :</p>
     <ul>
-      <li>Atlanta</li>
-      <li>Austin</li>
-      <li>Boston</li>
-      <li>Chicago</li>
-      <li>Dallas</li>
-      <li>Hong Kong</li>
-      <li>London</li>
-      <li>Los Angeles</li>
-      <li>Melbourne</li>
-      <li>New York City</li>
-      <li>San Francisco</li>
-      <li>Seattle</li>
-      <li>Sydney</li>
-      <li>washington D.C.</li>
+      <li>Imaginative</li>
+      <li>sociable</li>
+      <li>attachante</li>
+      <li>Belle</li>
+      <li>Elegante</li>
+      <li>Legere</li>
+      <li>Lumineuse</li>
+      <li>Eblouissante</li>
     </ul>
+    <p>Bref...une des plus belles mariées de l'année, au grand plaisir de son fiancé Arnaud qui est lui-même:</p>
+    
     
     <p>For more information, visit <a href="http://generalassemb.ly">General Assembly's website</a>.</p>
   </body>
