--- a/UNIT_1/index.html
+++ b/UNIT_1/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Mariage d'Isabelle et Arnaud</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-  </head>
-  <body>
+<head>
+<title>Mariage d'Isabelle et Arnaud</title>
+<link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<div id="menu">
+<ul>
+  <li style="float:right"><a href="index.html">Accueil</a></li>
+  <li><a href="isabelle.jpg">Les maries</a></li>
+  <li><a href="contact.asp">Le programme</a></li>
+  <li><a href="about.asp">Le lieu</a></li>
+</ul>
+</div>
+<body>
   <h1>Mariage d'Isabelle et Arnaud</h1>
-    <h2>Trouvez toutes les informations dont vous avez besoin pour profiter pleinement de ce mariage</h2>
-    <h3>commencons immediatement avec une petit presentation de ce beau couple.</h3>
-    <p>Isabelle est une femme :</p>
-    <ul>
-      <li>Imaginative</li>
-      <li>sociable</li>
-      <li>attachante</li>
-      <li>Belle</li>
-      <li>Elegante</li>
-      <li>Legere</li>
-      <li>Lumineuse</li>
-      <li>Eblouissante</li>
+  <img class="photocouple" img src="images/photo1.jpg" alt="Photo1" style="width:50%;height:50%;">
+  <h2>Trouvez toutes les informations dont vous avez besoin pour profiter pleinement du mariage.</h2>
+  <h3>Ou le mariage se passe-t-il?</h3>
+    <p>Isabelle et Arnaud sont ravis de vous recevoir pour:</p>
+    <ul class="list-unstyled">
+     <li>Le mariage civil a la mairie du 15eme arrondissement</li>
+     <li>Le mariage religieux aura lieu a l'eglise XXX</li>
+     <li>Le cocktail a partir de 16h dans la salle de reception XX</li>
+     <li>Le diner au meme endroit (invitation obligatoire)</li>
+     <li>La soiree se trouvera dans la salle attenente au lieu de reception</li>
     </ul>
-    <p>Bref...une des plus belles mariées de l'année, au grand plaisir de son fiancé Arnaud qui est lui-même:</p>
-    
-    
-    <p>For more information, visit <a href="http://generalassemb.ly">General Assembly's website</a>.</p>
-  </body>
+    <p>Les plus beaux maries ont hate de vous retrouver pour celebrer ce moment important avec vous et ils vous disent au 17 Juillet 2017.</p>
+  <h3>Mais qui sont-ils?</h3>
+</div>
+    <p>For more information, visit <a href="#">site web du lieu de reception</a>.</p>
+</body>
 </html>
