--- a/UNIT_1/index.html
+++ b/UNIT_1/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-<title>Mariage d'Isabelle et Arnaud</title>
-<link rel="stylesheet" type="text/css" href="css/main.css">
+    <title>Mariage d'Isabelle et Arnaud</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <meta charset="utf-8">
 </head>
-<div id="menu">
-<ul>
-  <li style="float:right"><a href="index.html">Accueil</a></li>
-  <li><a href="isabelle.jpg">Les maries</a></li>
-  <li><a href="contact.asp">Le programme</a></li>
-  <li><a href="about.asp">Le lieu</a></li>
-</ul>
-</div>
 <body>
-  <h1>Mariage d'Isabelle et Arnaud</h1>
-  <img class="photocouple" img src="images/photo1.jpg" alt="Photo1" style="width:50%;height:50%;">
-  <h2>Trouvez toutes les informations dont vous avez besoin pour profiter pleinement du mariage.</h2>
-  <h3>Ou le mariage se passe-t-il?</h3>
+    <nav id="menu">
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="isabelle.jpg">Les maries</a></li>
+            <li><a href="contact.asp">Le programme</a></li>
+            <li><a href="about.asp">Le lieu</a></li>
+        </ul>
+    </nav>
+    <h1>Mariage d'Isabelle et Arnaud</h1>
+    <img class="photocouple" src="images/photo1.jpg" alt="Photo of Isabelle and Arnaud at the beach">
+    <h2>Trouvez toutes les informations dont vous avez besoin pour profiter pleinement du mariage.</h2>
+    <h3>Ou le mariage se passe-t-il?</h3>
     <p>Isabelle et Arnaud sont ravis de vous recevoir pour:</p>
     <ul class="list-unstyled">
-     <li>Le mariage civil a la mairie du 15eme arrondissement</li>
-     <li>Le mariage religieux aura lieu a l'eglise XXX</li>
-     <li>Le cocktail a partir de 16h dans la salle de reception XX</li>
-     <li>Le diner au meme endroit (invitation obligatoire)</li>
-     <li>La soiree se trouvera dans la salle attenente au lieu de reception</li>
+        <li>Le mariage civil a la mairie du 15eme arrondissement</li>
+        <li>Le mariage religieux aura lieu a l'eglise XXX</li>
+        <li>Le cocktail a partir de 16h dans la salle de reception XX</li>
+        <li>Le diner au meme endroit (invitation obligatoire)</li>
+        <li>La soiree se trouvera dans la salle attenente au lieu de reception</li>
     </ul>
     <p>Les plus beaux maries ont hate de vous retrouver pour celebrer ce moment important avec vous et ils vous disent au 17 Juillet 2017.</p>
-  <h3>Mais qui sont-ils?</h3>
-</div>
+    <h3>Mais qui sont-ils?</h3>
     <p>For more information, visit <a href="#">site web du lieu de reception</a>.</p>
 </body>
 </html>
