Syncing new images!

--- a/UNIT_1/index.html
+++ b/UNIT_1/index.html
@@ -15,7 +15,7 @@
         </ul>
     </nav>
     <h1>Mariage d'Isabelle et Arnaud</h1>
-    <img class="photocouple" src="images/photo1.jpg" alt="Photo of Isabelle and Arnaud at the beach">
+    <img class="photocouple" src="images\photo1.jpg" alt="Photo of Isabelle and Arnaud at the beach">
     <h2>Trouvez toutes les informations dont vous avez besoin pour profiter pleinement du mariage.</h2>
     <h3>Ou le mariage se passe-t-il?</h3>
     <p>Isabelle et Arnaud sont ravis de vous recevoir pour:</p>
