--- a/UNIT_1/Laregion.html
+++ b/UNIT_1/Laregion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-	<title>Les mariés</title>
+	<title>La région</title>
 </head>
 <body>
 <nav id="menu">
@@ -12,5 +12,6 @@
             <li><a href="laregion.asp">La région</a></li>
         </ul>
     </nav>
+ <p>For more information, visit <a href="#">site web du lieu de reception</a>.</p>
 </body>
 </html>
