--- a/UNIT_1/index.html
+++ b/UNIT_1/index.html
@@ -9,9 +9,9 @@
     <nav id="menu">
         <ul>
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="lesmaries.jpg">Les mariés</a></li>
-            <li><a href="lieu.asp">Le jour du mariage</a></li>
-            <li><a href="laregion.asp">La région</a></li>
+            <li><a href="lesmaries.html">Les mariés</a></li>
+            <li><a href="lejourdumariage.html">Le jour du mariage</a></li>
+            <li><a href="laregion.html">La région</a></li>
         </ul>
     </nav>
     <h1>Mariage d'Isabelle et Arnaud</h1>
