--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -10,23 +10,28 @@
     <h1>Mariage</br>Isabelle & Arnaud</h1>
   </nav>
   <nav id="menu">
-     <button><span>Kikoo</span></button>
-      <div>
       <ul>
        <li><a href=#titre>Accueil</a></li>
        <li><a href=#lesmaries>Les mariés</a></li>
        <li><a href=#datedumariage>Le jour du mariage</a></li>
        <li><a href=#lieudereception>Le lieu de réception</a></li>
-       <li><a href=#leregion>La région</a></li>
+       <li><a href=#laregion>La région</a></li>
       </ul>
-      </div>
   </nav>
   <nav id="lesmaries">
-    <img class="photocouple" src="images\photo1.jpg" alt="Photo of Isabelle and Arnaud at the beach">
+     <img class="photocouple" src="images\photo1.jpg" alt="Photo d'Isabelle et Arnaud">
   </nav>
   <nav id="datedumariage">
-    <p>Le 17 Juillet 2017</p>
-    <p>Dans XXX jours</p>
+    <h1>Le 17 Juillet 2017</h1>
+    <h2>Cérémonie religieuse</h2>
+    <p>15h</p>
+    <p>Eglise de ...<p>
+    <p>adresse de l'église<p>
+    <h2>Réception</h2>
+    <p>19h<p>
+    <p>Allée des Marolles</p>
+    <p>1, Rue des Acacias, Hameau de Marolles</p>
+    <p>28150 Rouvray-Saint-Florentin</p>
   </nav>
   <nav id="lieudereception">
     <p>For more information, visit <a href="http://www.alleedemarolles28.fr/">site web du lieu de reception</a>.</p>
