--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -9,13 +9,11 @@
     <header id="titre">
         <h1>Mariage</br>Isabelle & Arnaud</h1>
         <nav id="menu">
-            <ul>
-                <li><a href=#titre>Accueil</a></li>
-                <li><a href=#lesmaries>Les mariés</a></li>
-                <li><a href=#datedumariage>Le jour du mariage</a></li>
-                <li><a href=#lieudereception>Le lieu de réception</a></li>
-                <li><a href=#laregion>La région</a></li>
-            </ul>
+            <a href="#titre">Accueil</a>
+            <a href="#lesmaries">Les mariés</a>
+            <a href="#datedumariage">Le jour du mariage</a>
+            <a href="#lieudereception">Le lieu de réception</a>
+            <a href="#laregion">La région</a>
         </nav>
     </header>
     <img class="photocouple" src="images\photo1.jpg" alt="Photo d'Isabelle et Arnaud">
@@ -40,6 +38,5 @@
     </section>
     <section id="laregion">
     </section>
->>>>>>> origin/master
 </body>
 </html>
