--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -4,28 +4,40 @@
     <title>Mariage d'Isabelle et Arnaud</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <title>Mariage d'Isabelle et Arnaud</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <meta charset="utf-8">
 </head>
 <body>
     <header id="titre">
-        <h1>Mariage</br>Isabelle & Arnaud</h1>
-        <nav id="menu">
-            <ul>
-                <li><a href=#titre>Accueil</a></li>
-                <li><a href=#lesmaries>Les mariés</a></li>
-                <li><a href=#datedumariage>Le jour du mariage</a></li>
-                <li><a href=#lieudereception>Le lieu de réception</a></li>
-                <li><a href=#laregion>La région</a></li>
-            </ul>
+    <nav id="menu">
+            <a href="#titre">Accueil</a>
+            <a href="#lesmaries">Les mariés</a>
+            <a href="#datedumariage">Le jour du mariage</a>
+            <a href="#lieudereception">Le lieu de réception</a>
+            <a href="#laregion">La région</a>
         </nav>
+        <h1>Mariage</br>Isabelle & Arnaud</h1>
     </header>
+    <section id="lesmaries">
     <img class="photocouple" src="images\photo1.jpg" alt="Photo d'Isabelle et Arnaud">
+    </section>
     <section id="datedumariage">
         <h1>Le 17 Juillet 2017</h1>
+        <section>
+            <h2>Cérémonie civile</h2>
+            <p>11h</p>
+            <p>Mairie de...</p>
+            <p>Adresses de la mairie</p>
+        </section>
         <section>
             <h2>Cérémonie religieuse</h2>
             <p>15h</p>
             <p>Eglise de ...<p>
-            <p>adresse de l'église<p>
+            <p>Adresse de l'église<p>
         </section>
         <section>
             <h2>Réception</h2>
@@ -34,12 +46,17 @@
             <p>1, Rue des Acacias, Hameau de Marolles</p>
             <p>28150 Rouvray-Saint-Florentin</p>
         </section>
+        <section>
+            <h2>Brunch</h2>
+            <p>11h</p>
+            <p>Lieu du brunch</p>
+            <p>Le matin à </p>
+        </section>
     </section>
     <section id="lieudereception">
         <p>For more information, visit <a href="http://www.alleedemarolles28.fr/">site web du lieu de reception</a>.</p>
     </section>
     <section id="laregion">
     </section>
->>>>>>> origin/master
 </body>
 </html>
