--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -18,7 +18,7 @@
             <a href="#lesmaries">Les mariés</a>
             <a href="#datedumariage">Le jour du mariage</a>
             <a href="#lieudereception">Le lieu de réception</a>
-            <a href="#laregion">La région</a>
+            <a href="#lestemoins">Les témoins</a>
         </nav>
         <img class="photocouple" src="images\photo1.jpg" alt="Photo d'Isabelle et Arnaud">
         <h1>Mariage</br>Isabelle & Arnaud</h1>
@@ -54,7 +54,7 @@
     <section id="lieudereception">
         <p>For more information, visit <a href="http://www.alleedemarolles28.fr/">site web du lieu de reception</a>.</p>
     </section>
-    <section id="laregion">
+    <section id="lestemoins">
     </section>
 </body>
 </html>
