--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -50,44 +50,61 @@
         <p>For more information, visit <a href="http://www.alleedemarolles28.fr/">site web du lieu de reception</a>.</p>
     </section>
     <section id="lestemoins">
-    	<h1>Les témoins d'Isabelle</h1>
     		<section id="temoinsisabelle">
+    		<h1>Les témoins d'Isabelle</h1>
+    		<section id="temoinsisabelle1" class="clearfix">
     			<img class="photoclaire" src="images\claire.jpg" alt="Photo Claire">
             	<h2>Claire</h2>
           	</section>
-          	<section id="temoinsisabelle">
+          	<section id="temoinsisabelle1" class="clearfix">
     			<img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
             	<h2>Lucie</h2>
           	</section>
-         	<section id="temoinsisabelle">
+         <div style="clear: both;"></div>
+         	<section id="temoinsisabelle2" class="clearfix">
     			<img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
             	<h2>Lucie</h2>
           	</section>
-          	<section id="temoinsisabelle">
+          	<section id="temoinsisabelle2" class="clearfix">
     			<img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
             	<h2>Lucie</h2>
          	</section>
+         	</section>
          <div style="clear: both;"></div>
+         <section id="temoinsarnaud">
          <h1>Les témoins d'Arnaud</h1>
-          <section id="temoinsarnaud">
+          <section id="temoinsgarcons1" class="clearfix">
     			<img class="photoclaire" src="images\claire.jpg" alt="Photo Claire">
             	<h2>Claire</h2>
           	</section>
-          	<section id="temoinsarnaud">
+          	<section id="temoinsgarcons1" class="clearfix">
     			<img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
             	<h2>Lucie</h2>
           	</section>
-         	<section id="temoinsarnaud">
+          <div style="clear: both;"></div>
+         	<section id="temoinsgarcons2" class=="clearfix">
     			<img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
             	<h2>Lucie</h2>
           	</section>
-          	<section id="temoinsarnaud">
+          	<section id="temoinsgarcons2" class="clearfix">
     			<img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
             	<h2>Lucie</h2>
          	</section>
-         <div style="clear: both;"></div>
-    </section>
+         	</section>
+         	<div style="clear: both;"></div>
+         	</section>
     <section id="lescadeaux">
     </section>
+    <section id="two_column" class="clearfix">
+    <aside id="left">
+        <p>ASIDE<p>
+        <p>Lorem Ipsum…</p>
+    </aside>
+    <article id="right">
+        <p>ARTICLE</p>
+        <p>Lorem Ipsum…</p>
+        <p>Lorem Ipsum…</p>
+    </article>
+</section>
 </body>
 </html>
