--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -102,6 +102,7 @@
     
 
     <section id="lescadeaux">
+      <img class="listeecadeau" src="images\listecadeau.jpg" alt="Liste de Cadeaux">
     </section>
     
 </body>
