--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <title>Mariage d'Isabelle et Arnaud</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta charset="utf-8">
 </head>
