--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -14,6 +14,7 @@
             <a href="#lieudereception">Le lieu de réception</a>
             <a href="#lestemoins">Les témoins</a>
             <a href="#lescadeaux">Les cadeaux</a>
+            <a href="#musique">La soirée</a>
         </nav>
         <img class="photocouple" src="images\photo1.jpg" alt="Photo d'Isabelle et Arnaud">
         <h1>Mariage</br>Isabelle & Arnaud</h1>
@@ -115,6 +116,10 @@
     	<h1>Pour les petits cadeaux c'est par là!</h1>
     	<a href="#titre"><img src="images\listecadeau.jpg" alt="Liste de Cadeaux"/></a>
     </section>
+
+    <section id="musique">
+    	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSch3U43YY_1rClpWQFJKUqbuqjXZLU8OpPZw64WooFGjYddxQ/viewform?embedded=true" width="1350px" height="700px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    </section>    
     
 </body>
 </html>
