--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -60,7 +60,7 @@
         		<ul>Gare de Voves: 50min au départ de Paris-Austerlitz</ul>
         		<p>Pour les trains, c'est par ici</p>
         </subsection>
-        <subsection id=deirectionphoto>
+        <subsection id=directionphoto>
         	<img class="photoclaire" src="images\carte.png" alt="Photo accès">
         </subsection>
     </section>
@@ -118,7 +118,7 @@
     </section>
 
     <section id="musique">
-    	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSch3U43YY_1rClpWQFJKUqbuqjXZLU8OpPZw64WooFGjYddxQ/viewform?embedded=true" width="1350px" height="700px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSch3U43YY_1rClpWQFJKUqbuqjXZLU8OpPZw64WooFGjYddxQ/viewform?embedded=true" width="100%" height="700px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </section>    
     
 </body>
