--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -19,6 +19,7 @@
         <img class="photocouple" src="images\photo1.jpg" alt="Photo d'Isabelle et Arnaud">
         <h1>Mariage</br>Isabelle & Arnaud</h1>
     </header>
+
     <section id="datedumariage">
         <h1>Le 17 Juillet 2017</h1>
         <img class="photomaries" src="images\reception.jpg" alt="Photo de maries">
@@ -85,7 +86,7 @@
 
         <section id="temoinsarnaud">
             <h1>Les témoins d'Arnaud</h1>
-            <section class="temoinsarnaud1>
+            <section class="temoinsarnaud1 clearfix">
     			 <img class="photoclaire" src="images\claire.jpg" alt="Photo Claire">
            <h2>Claire</h2>
         </section>
