--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -13,31 +13,26 @@
             <a href="#datedumariage">Le jour du mariage</a>
             <a href="#lieudereception">Le lieu de réception</a>
             <a href="#lestemoins">Les témoins</a>
-            <a href="#lescadeaux">Les cadeaux</a>
-            <a href="#musique">La soirée</a>
+            <a href="#lescadeaux">Liste de mariage</a>
+            <a href="#musique">Musique</a>
         </nav>
-        <img class="photocouple" src="images\photo1.jpg" alt="Photo d'Isabelle et Arnaud">
+        <img class="photocouple" src="images\photo3.jpg" alt="Photo d'Isabelle et Arnaud">
         <h1>Mariage</br>Isabelle & Arnaud</h1>
     </header>
 
     <section id="datedumariage">
-        <h1>Le 17 Juillet 2017</h1>
+        <h1>Le 22 Juillet 2017</h1>
         <img class="photomaries" src="images\reception.jpg" alt="Photo de maries">
-        <section class="subsection">
-            <h2>Cérémonie civile</h2>
-            <p>11h</p>
-            <p>Mairie de...</p>
-            <p>Adresses de la mairie</p>
-        </section>
         <section class="subsection">
             <h2>Cérémonie religieuse</h2>
             <p>15h</p>
-            <p>Eglise de ...<p>
-            <p>Adresse de l'église<p>
+            <p>Eglise de Gallardon</p>
+            <p>10 impasse du Coeur à Margot</p>
+            <p>28320 Gallardon</p>
         </section>
         <section class="subsection">
             <h2>Réception</h2>
-            <p>19h<p>
+            <p>XXXh<p>
             <p>Allée des Marolles</p>
             <p>1, Rue des Acacias, Hameau de Marolles</p>
             <p>28150 Rouvray-Saint-Florentin</p>
@@ -76,11 +71,11 @@
             </section>
             <section class="temoinsisabelle1 clearfix">
     		    <img class="photogeoffroy" src="images\geoffroy.jpg" alt="Photo Geoffroy">
-                <h2>Lucie</h2>
+                <h2>Geoffroy</h2>
             </section>
             <section class="temoinsisabelle1 clearfix">
     		    <img class="photoperrine" src="images\perrine.jpg" alt="Photo Perrine">
-                <h2>Lucie</h2>
+                <h2>Perrine</h2>
             </section>
         </section>
 
@@ -88,19 +83,19 @@
             <h1>Les témoins d'Arnaud</h1>
             <section class="temoinsarnaud1 clearfix">
     			 <img class="photoclaire" src="images\claire.jpg" alt="Photo Claire">
-           <h2>Claire</h2>
+           <h2>Thibault</h2>
         </section>
         <section class="temoinsarnaud1 clearfix">
     			 <img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
-           <h2>Lucie</h2>
+           <h2>Marc</h2>
         </section>
         <section class="temoinsarnaud1 clearfix">
     			   <img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
-             <h2>Lucie</h2>
+             <h2>Arthur</h2>
         </section>
         <section class="temoinsarnaud1 clearfix">
             <img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
-            <h2>Lucie</h2>
+            <h2>Baudoin</h2>
         </section>
         </section>
     </section>
@@ -112,7 +107,7 @@
     </section>
 
     <section id="musique">
-    	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSch3U43YY_1rClpWQFJKUqbuqjXZLU8OpPZw64WooFGjYddxQ/viewform?embedded=true" width="100%" height="700px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeDSBSDbCxT_Tn5vZQlnJ1YsjnLdLIbHhPB9Tgnp3MrLHP1Cw/viewform" width="100%" height="700px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </section>    
     
 </body>
