--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -10,11 +10,12 @@
     <header id="titre">
         <nav id="menu" class="clearfix">
             <a href="#titre">Accueil</a>
-            <a href="#datedumariage">Le jour du mariage</a>
-            <a href="#lieudereception">Le lieu de réception</a>
+            <a href="#datedumariage">Le programme</a>
+            <a href="#lieudereception">Le lieu</a>
             <a href="#lestemoins">Les témoins</a>
-            <a href="#lescadeaux">Liste de mariage</a>
-            <a href="#musique">Musique</a>
+            <a href="#lescadeaux">La liste de mariage</a>
+            <a href="#musique">La musique</a>
+            <a href="https://www.facebook.com/events/1186483151451034/?notif_t=event_friend_joined&notif_id=1481380900838342"><img class="facebook" src="images\facebook.png" alt="Icone Facebook"/></a>
         </nav>
         <img class="photocouple" src="images\photo3.jpg" alt="Photo d'Isabelle et Arnaud">
         <h1>Mariage</br>Isabelle & Arnaud</h1>
@@ -50,11 +51,11 @@
         	<h3>En voiture</h3>
     		<p>à 15min de Chartres</p>
     		<p>à 1h au sud-ouest de Paris</p>
-    		<p>Pour le covoiturage, c'est par ici</p>
+    		<p>Pour le covoiturage, c'est par <a href="https://www.facebook.com/events/1186483151451034/?notif_t=event_friend_joined&notif_id=1481380900838342"> ici</a></p>
         	<h3>En train</h3>
     		<p>Gare de Chartres: 50min au départ de Paris-Montparnasse</p>
     		<p>Gare de Voves: 50min au départ de Paris-Austerlitz</p>
-    		<p>Pour les trains, c'est par ici</p>
+    		<p>Pour les trains, c'est par <a href="https://uk.voyages-sncf.com/en/?redirect=yes"> ici</a></p>
         </div>
         <img class="photoclaire" src="images\carte.png" alt="Photo accès" id="directionphoto">
     </section>
@@ -109,6 +110,6 @@
     <section id="musique">
     	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeDSBSDbCxT_Tn5vZQlnJ1YsjnLdLIbHhPB9Tgnp3MrLHP1Cw/viewform" width="100%" height="700px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </section>    
-    
+   	
 </body>
 </html>
