--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -17,8 +17,7 @@
             <a href="#musique">La musique</a>
             <a href="https://www.facebook.com/events/1186483151451034/?notif_t=event_friend_joined&notif_id=1481380900838342"><img class="facebook" src="images\facebook.png" alt="Icone Facebook"/></a>
         </nav>
-        <img class="photocouple" src="images\photo3.jpg" alt="Photo d'Isabelle et Arnaud">
-        <h1>Mariage</br>Isabelle & Arnaud</h1>
+        <h1>Mariage Isabelle & Arnaud</h1>
     </header>
 
     <section id="datedumariage">
@@ -83,11 +82,11 @@
         <section id="temoinsarnaud">
             <h1>Les témoins d'Arnaud</h1>
             <section class="temoinsarnaud1 clearfix">
-    			 <img class="photoclaire" src="images\claire.jpg" alt="Photo Claire">
+    			 <img class="photothibault" src="images\thibault2.png" alt="Photo Claire">
            <h2>Thibault</h2>
         </section>
         <section class="temoinsarnaud1 clearfix">
-    			 <img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
+    			 <img class="photomarc" src="images\marc.png" alt="Photo Marc">
            <h2>Marc</h2>
         </section>
         <section class="temoinsarnaud1 clearfix">
