--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -70,7 +70,7 @@
                 <h2>Lucie</h2>
             </section>
             <section class="temoinsisabelle1 clearfix">
-    		    <img class="photogeoffroy" src="images\geoffroy.jpg" alt="Photo Geoffroy">
+    		    <img class="photogeoffroy" src="images\geo.jpg" alt="Photo Geoffroy">
                 <h2>Geoffroy</h2>
             </section>
             <section class="temoinsisabelle1 clearfix">
