--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -54,7 +54,7 @@
         	<h3>En train</h3>
     		<p>Gare de Chartres: 50min au départ de Paris-Montparnasse</p>
     		<p>Gare de Voves: 50min au départ de Paris-Austerlitz</p>
-    		<p>Pour les trains, c'est par <a href="https://uk.voyages-sncf.com/en/?redirect=yes"> ici</a></p>
+    		<p>Pour les trains, c'est par <a href="http://www.voyages-sncf.com/"> ici</a></p>
         </div>
         <img class="photoclaire" src="images\carte.png" alt="Photo accès" id="directionphoto">
     </section>
