--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -24,16 +24,15 @@
         <h1>Le 22 Juillet 2017</h1>
         <img class="photomaries" src="images\reception.jpg" alt="Photo de maries">
         <section class="subsection">
-            <h2>Cérémonie religieuse</h2>
+            <h2>Messe de mariage</h2>
             <p>15h</p>
-            <p>Eglise de Gallardon</p>
-            <p>10 impasse du Coeur à Margot</p>
+            <p>Eglise Saint-Pierre et Saint-Paul de Gallardon</p>
             <p>28320 Gallardon</p>
         </section>
         <section class="subsection">
             <h2>Réception</h2>
             <p>XXXh<p>
-            <p>Allée des Marolles</p>
+            <p>Allée de Marolles</p>
             <p>1, Rue des Acacias, Hameau de Marolles</p>
             <p>28150 Rouvray-Saint-Florentin</p>
         </section>	
@@ -90,19 +89,19 @@
            <h2>Marc</h2>
         </section>
         <section class="temoinsarnaud1 clearfix">
-    			   <img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
+    			   <img class="photolucie" src="images\arthur.jpg" alt="Photo Arthur">
              <h2>Arthur</h2>
         </section>
         <section class="temoinsarnaud1 clearfix">
-            <img class="photolucie" src="images\lucie.jpg" alt="Photo Lucie">
-            <h2>Baudoin</h2>
+            <img class="photolucie" src="images\baudouin.jpg" alt="Photo Baudouin">
+            <h2>Baudouin</h2>
         </section>
         </section>
     </section>
     
 
     <section id="lescadeaux">
-    	<h1>Pour les petits cadeaux c'est par là!</h1>
+    	<h1>La liste de mariage c'est par ici!</h1>
     	<a href="#titre"><img src="images\listecadeau.jpg" alt="Liste de Cadeaux"/></a>
     </section>
 
