--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -89,11 +89,11 @@
            <h2>Marc</h2>
         </section>
         <section class="temoinsarnaud1 clearfix">
-    			   <img class="photolucie" src="images\arthur.jpg" alt="Photo Arthur">
+    			   <img class="photoarthur" src="images\arthur.jpg" alt="Photo Arthur">
              <h2>Arthur</h2>
         </section>
         <section class="temoinsarnaud1 clearfix">
-            <img class="photolucie" src="images\baudouin.jpg" alt="Photo Baudouin">
+            <img class="photobaudouin" src="images\baudouin.jpg" alt="Photo Baudouin">
             <h2>Baudouin</h2>
         </section>
         </section>
