--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -81,7 +81,7 @@
         <section id="temoinsarnaud">
             <h1>Les témoins d'Arnaud</h1>
             <section class="temoinsarnaud1 clearfix">
-    			 <img class="photothibault" src="images\thibault2.png" alt="Photo Claire">
+    			 <img class="photothibault" src="images\thibault.png" alt="Photo Claire">
            <h2>Thibault</h2>
         </section>
         <section class="temoinsarnaud1 clearfix">
