--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -41,7 +41,7 @@
 
     <section id="lieudereception" class="clearfix">
         <div id="direction">
-            <h2>L'allée des Marolles</h2>
+            <h2>L'allée de Marolles</h2>
       		<p>1, Rue des Acacias, Hameau de Marolles</p>
             <p>28150 Rouvray-Saint-Florentin</p>
         	<p>Pour plus d'information, voici <a href="http://www.alleedemarolles28.fr/"> le site web du lieu de reception</a>.</p>
