--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -61,7 +61,7 @@
         <section id="temoinsisabelle">
             <h1>Les témoins d'Isabelle</h1>
             <section class="temoinsisabelle1">
-                <img class="photoclaire" src="images\claire.jpg" alt="Photo Claire">
+                <img class="photoclaire" src="images\claire1.jpg" alt="Photo Claire">
                 <h2>Claire</h2>
             </section>
             <section class="temoinsisabelle1">
