--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -17,6 +17,7 @@
             <a href="#musique">La musique</a>
             <a href="https://www.facebook.com/events/1186483151451034/?notif_t=event_friend_joined&notif_id=1481380900838342"><img class="facebook" src="images\facebook.png" alt="Icone Facebook"/></a>
         </nav>
+         <img class="lecouple" src="images\photo3.jpg" alt="Photo du couple">
         <h1>Mariage Isabelle & Arnaud</h1>
     </header>
 
@@ -45,6 +46,7 @@
       		<p>1, Rue des Acacias, Hameau de Marolles</p>
             <p>28150 Rouvray-Saint-Florentin</p>
         	<p>Pour plus d'information, voici <a href="http://www.alleedemarolles28.fr/"> le site web du lieu de reception</a>.</p>
+        	<p>Attention! Présence d'une pièce d'eau non sécurisée</p>
             <h2>ACCES</h2>
         	<h3>En voiture</h3>
     		<p>à 15min de Chartres</p>
